fixes wrapUnwrap currency and others details

--- a/src/styles/modules/_labels.scss
+++ b/src/styles/modules/_labels.scss
@@ -39,7 +39,7 @@
   text-align: left;
   padding-left: 10px;
   text-transform: uppercase;
-  width: 120px;
+  width: 70px;
 }
 
 @mixin ellipsis($max-width: auto) {
